[package]
name = "sst"
version = "0.2.1"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2018"

# [dependencies.startin]
# path = "../startin/"

[dependencies]
hashbrown = "0.11.2"
rand = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
geojson= "*"
serde_json= "*"
las = { version = "0.7", features = ["laz"] }
num-format = "0.4.0"
clap = { version = "4.0.*", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
robust = "0.2"
startin = "0.6.2"
rayon = "1.6.1"

[[bin]]
name = "sstats"
path = "src/sstats/bin/main.rs"

[[bin]]
name = "sstfin"
path = "src/sstfin/bin/main.rs"

[[bin]]
name = "sstdt"
path = "src/sstdt/bin/main.rs"

[[bin]]
name = "sstdt2"
path = "src/sstdt2/bin/main.rs"

[[bin]]
name = "sstsimpl"
path = "src/sstsimpl/bin/main.rs"

[[bin]]
name = "sstsimpl2"
path = "src/sstsimpl2/bin/main.rs"

[[bin]]
name = "sstval"
path = "src/sstval/bin/main.rs"
